<resources>
    <string name="app_name">Aplicacion con fragmentos</string>
    <string name="dev">Desarrollado por: Hector Saul y Luis Ricardo </string>
    <string name="textoPantallaInicio">Cargando… </string>
    <string name="clienteOpc1">Información</string>
    <string name="clienteOpc2">Opciones</string>
    <string name="clienteOpc3">Inicio de sesion</string>
    <string name="clienteOpc4">Cerrar aplicacion</string>
    <string name="admonOpc1">Registro de cliente</string>
    <string name="admonOpc2">Opciones</string>
    <string name="admonOpc3">Cerrar sesión</string>
    <string name="clienteInformacionTitulo">Informacion del cliente</string>
    <string name="clienteNombreEtiqueta">Nombre:</string>
    <string name="clienteApellidoPaternoEtiqueta">Apellido paterno:</string>
    <string name="clienteApellidoMaternoEtiqueta">Apellido materno:</string>
    <string name="clientePais">Pais:</string>
    <string name="clienteCorreoEtiqueta">Correo electronico:</string>
    <string name="opcionesTitulo">Opciones</string>
    <string name="opcion1">Alternar entre temas:</string>
    <string name="opcion2">Tamaño de letra en menu:</string>
    <string name="loginTitulo">Inicio de sesion</string>
    <string name="logoutTitulo">Cerrar sesion</string>
    <string name="correoElectronicoEtiqueta">Correo electronico o usuario:</string>
    <string name="contraseñaEtiqueta">Contraseña:</string>
    <string name="botonIniciarSesion">Iniciar sesion</string>
    <string name="botonCerrarSesion">Adieu</string>
    <string name="modoOscuroOnBoton">Modo luminoso</string>
    <string name="modoOscuroOffBoton"> Modo oscuro</string>
    <string name="bienvenidaPantallaPrincipal">¡Bienvenido a la aplicacion!</string>
    <string name="nombreInvitado"> Big </string>
    <string name="apellidoPaternoInvitado"> Floppa</string>
    <string name="apellidoMaternoInvitado">Kaminski</string>
    <string name="paisInvitado">Polonia</string>
    <string name="aumentarBoton">Aumentar</string>
    <string name="disminuirBoton">Disminuir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_confirmacion_registro2">confirmacion_registro2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="en_la_sesion_de_administrador_puede_dar_de_alta_a_clientes">En la sesion de administrador puede dar de alta a clientes.</string>
    <string name="sesion_de_administrador">Sesion de administrador</string>
    <string name="ingrese_los_datos_del_cliente">Ingrese los datos del cliente:</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="apellido_materno">Apellido materno</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmaci_n_de_contrase_a">Confirmación de Contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cerrarApp"> Cerrar aplicacion </string>
</resources>