<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:padding="16dp"
    tools:context=".registro_cliente">

    <TextView
        android:id="@+id/textForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_los_datos_del_cliente"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/textColor"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppEvaluacion3.EditText"
            android:layout_marginBottom="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido_paterno"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextApPaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppEvaluacion3.EditText"
            android:layout_marginBottom="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido_materno"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextApMaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppEvaluacion3.EditText"
            android:layout_marginBottom="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electronico"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppEvaluacion3.EditText"
            android:layout_marginBottom="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/Widget.AppEvaluacion3.EditText"
            android:layout_marginBottom="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmaci_n_de_contrase_a"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConfirmacionContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/Widget.AppEvaluacion3.EditText"
            android:layout_marginBottom="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppEvaluacion3.Button"
        android:text="@string/guardar" />

</LinearLayout>



