<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio"
    android:background="@color/backgroundColor"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:src="@drawable/city" />

        <TextView
            android:id="@+id/proy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textoPantallaInicio"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dev"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@color/backgroundAnimation"
            app:lottie_autoPlay="true"
            app:lottie_fileName="wololo.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>